fixed random off centeredness that was driving me crazy

--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -18,6 +18,7 @@
 		width: clamp(300px, 80vw, 1000px);
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
 		@media (max-width: 768px) {
 			grid-template-columns: 1fr;
 		}
